<resources>
    <string name="app_name">DinderFE</string>
    <string name="textFindDinder">Find Dinder</string>
    <string name="ProfileName">Profile Name</string>
    <string name="textVegetarian">Vegetarian</string>
    <string name="textVegan">Vegan</string>
    <string name="textTODO">TODO</string>
    <string name="textKosher">Kosher</string>
    <string name="textHalal">Halal</string>
    <string name="textGluttenFree">Glutten-Free</string>
    <string name="textAllergies">Allergies</string>
    <string name="textOther">Other</string>
    <string name="textDiets">Dietary Restrictions:</string>
    <string name="hintEnter">Enter Here</string>
    <string name="textInterest">Interests:</string>
    <string name="textSports">Sports</string>
    <string name="textMovies">Movies</string>
    <string name="textOutdoors">Outdoors</string>
    <string name="textMusic">Music</string>
    <string name="textBooks">Books</string>
    <string name="textGames">Games</string>
    <string name="textSave">Save Profile</string>
    <string name="textEdit">Edit</string>
    <string name="textWhatWouldYouLike">What Would You LIke To Eat?</string>
    <string name="textOr">Or</string>
    <string name="textSurprise">Surprise Me!</string>
    <string name="textNext"><![CDATA[Next ->]]></string>

    <string-array name="cuisines">
        <item>Select Cuisine</item>
        <item> ------------ </item>
        <item>Sushi</item>
        <item>Mexican</item>
        <item>Greek</item>
        <item>Japanese</item>
        <item>Thai</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>American</item>
        <item>Vietnamese</item>
        <item>Bakery</item>
        <item>Italian</item>
    </string-array>
    <string name="title_activity_food_maps">Map</string>
    <string name="textDinder">Dinder</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="textLogin">Log in</string>
    <string name="textSignup">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="textConfirm">Confirm Password</string>
    <string name="textCreateAccount">Create Account</string>
    <string name="textCreateA">Create Account</string>
    <string name="textBack">Back</string>
    <string name="textFName">First Name</string>
    <string name="testLName">Last Name</string>
    <string name="textMale">Male</string>
    <string name="textFemale">Female</string>
    <string name="textOtherNA">Other/No Answer</string>
    <string name="textGender">Gender:</string>
    <string name="textPescetarian">Pescetarian</string>
    <string name="textLactose">Lactose-Free</string>
    <string name="textName">Name:</string>
    <string name="textSelectExp">Select Your Experience</string>
    <string name="textGenderP">Gender Preference:</string>
    <string name="textMen">Prefer Men</string>
    <string name="textWomen">Prefer Women</string>
    <string name="textNop">Prefer Any</string>
    <string name="textGroupS">Group Size:</string>
    <string name="textSmall">Prefer Small</string>
    <string name="Large">Prefer Large</string>
    <string name="textFDinder">Find Your Dinder</string>
    <string name="todo">TODO</string>
    <string name="textLookin">Looking for Matches</string>
    <string name="textMap">Go to Map</string>

</resources>