<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red_theme"
        android:text="@string/textSave"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/boxVegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textVegetarian"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/boxVegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textVegan"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/boxVegetarian"
        app:layout_constraintStart_toEndOf="@+id/boxVegetarian" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGender" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxGlutten" />

    <CheckBox
        android:id="@+id/boxLactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textLactose"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxVegetarian" />

    <CheckBox
        android:id="@+id/boxGlutten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textGluttenFree"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/boxLactose"
        app:layout_constraintStart_toEndOf="@+id/boxLactose" />

    <CheckBox
        android:id="@+id/boxPescetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textPescetarian"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/boxVegan"
        app:layout_constraintStart_toEndOf="@+id/boxVegan" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textDiets"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textInterest"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <CheckBox
        android:id="@+id/boxOutdoors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textOutdoors"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/boxMovies"
        app:layout_constraintStart_toEndOf="@+id/boxMovies" />

    <CheckBox
        android:id="@+id/boxMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textMusic"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/boxOutdoors"
        app:layout_constraintTop_toTopOf="@+id/boxOutdoors" />

    <CheckBox
        android:id="@+id/boxMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textMovies"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/boxSport"
        app:layout_constraintStart_toEndOf="@+id/boxSport" />

    <CheckBox
        android:id="@+id/boxSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/red_theme"
        android:text="@string/textSports"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/view3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/clipart2931307"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/red_theme"
        android:ems="10"
        android:hint="@string/textFName"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/inLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/red_theme"
        android:ems="10"
        android:hint="@string/testLName"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inFName" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:checked="true"
            android:text="@string/textMale"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:text="@string/textFemale"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/red_theme"
            android:text="@string/textOtherNA"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textGender"
        android:textColor="@color/red_theme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inLName" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textName"
        android:textColor="@color/red_theme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>