<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExperienceActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/textSelectExp"
        android:textAllCaps="false"
        android:textColor="@color/red_theme"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view11"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/red_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/view12"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/red_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <View
        android:id="@+id/view13"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/red_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSize" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textGenderP"
        android:textColor="@color/red_theme"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textGroupS"
        android:textColor="@color/red_theme"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view12" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <RadioButton
            android:id="@+id/radioMen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:checked="true"
            android:text="@string/textMen"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioWomen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:text="@string/textWomen"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioNoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:text="@string/textNop"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:checked="true"
            android:text="@string/textSmall"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:text="@string/Large"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioAny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/red_theme"
            android:text="@string/textNop"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonFindMatches"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/red_theme"
        android:text="@string/textFDinder"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBack2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/red_theme"
        android:text="@string/textBack"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFindMatches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view13"
        app:srcCompat="@drawable/dinderlogo"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>